--- a/.stickler.yml
+++ b/.stickler.yml
@@ -2,9 +2,7 @@
 linters:
   stylelint:
     # indicate where is the config file for stylelint
-    config: 'stylelint.config.js'
-    config: '.rubocop.yml'
-
+    config: ".rubocop.yml"
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
 
